--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h3>
 <a id="联系我们" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91%E4%BB%AC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系我们</h3>
 
-<p>请关注TDSQL官方公众号</p>
+<p>微信扫码关注TDSQL官方公众号<a href="https://github.com/TDSQL/Homepage/blob/gh-pages/qrcode_for_tdsql.jpg"></a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/TDSQL/Homepage">TDSQL</a> is maintained by <a href="https://github.com/TDSQL">TDSQL</a>.</span>
