Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h3>
 <a id="联系我们" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91%E4%BB%AC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系我们</h3>
 
-<p>微信扫码关注TDSQL官方公众号 
+<p>微信扫码关注TDSQL官方公众号<br>
 <img src="https://raw.githubusercontent.com/TDSQL/homepage/gh-pages/qrcode_for_tdsql.jpg" alt=""></p>
 
       <footer class="site-footer">
