--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">TDSQL</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/TDSQL/homepage" class="btn">View on GitHub</a>
-      <a href="https://github.com/TDSQL/homepage/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/TDSQL/homepage/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://www.qcloud.com/en/product/tdsql.html" class="btn">马上试用 > </a>
     </section>
 
     <section class="main-content">
@@ -55,7 +53,7 @@
 
 <hr>
 
-<p><img src="https://raw.githubusercontent.com/TDSQL/homepage/gh-pages/qrcode_for_tdsql.jpg" alt=""></p>
+<p><img align="center" src="https://raw.githubusercontent.com/TDSQL/homepage/gh-pages/qrcode_for_tdsql.jpg" alt=""></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/TDSQL/homepage">TDSQL</a> is maintained by <a href="https://github.com/TDSQL">TDSQL</a>.</span>
