--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">TDSQL</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">腾讯金融级分布式数据库</h2>
       <a href="https://www.qcloud.com/en/product/tdsql.html" class="btn"> 马上试用 > </a>
     </section>
 
