--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
-<title>关于TDSQL | TDSQL</title>
+<title>TDSQL -- 腾讯金融级分布式数据库</title>
 <meta property="og:title" content="关于TDSQL">
 <meta property="og:locale" content="en_US">
 <link rel="canonical" href="http://tdsql.org/">
@@ -25,7 +25,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">TDSQL</h1>
-      <h4 class="project-subname">腾讯金融级分布式数据库</h4>
+      <h4 class="project-name">腾讯金融级分布式数据库</h4>
       <h2 class="project-tagline"></h2>
       
         <a href="https://cloud.tencent.com/product/dcdb" class="btn">立即试用</a>
